--- a/index.html
+++ b/index.html
@@ -343,34 +343,30 @@
                 </ul>
             </div>
             <div class="foot-sub-div">
-                <p class="foot-sub-tittle">Subscribe</p>
+            <p class="foot-sub-tittle">Subscribe</p>
                 <form class="foot-sub-form">
-                    <label for="mail-foot" aria-label=""></label>
-                    <input type="email" name="footer-email" id="mail-foot" placeholder="E-mail"
-                        class="foot-mail-input" />
-                    <button type="submit" class="foot-sub-btn">Subscribe<svg class="foot-sub-svg" width="24"
-                            height="24">
-                            <use href="./images/icons.svg#icon-sub"></use>
-                        </svg></button>
+                    <label for="mail-foot" class="sub-label" aria-label=""></label>
+                    <input type="email" name="footer-email" id="mail-foot" placeholder="E-mail" class="foot-mail-input" />
+                    <button type="submit" class="foot-sub-btn">Subscribe<svg class="foot-sub-svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-sub"></use>
+                    </svg></button>
                 </form>
             </div>
         </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
-        <div class="modal">
-            <button type="button" class="modal-btn-close" data-modal-close><svg class="close-svg" width="8" height="8">
-                    <use href="./images/icons.svg#icon-close"></use>
-                </svg>
-            </button>
+      <div class="modal">
+        <button type="button" class="modal-btn-close" data-modal-close><svg class="close-svg" width="8" height="8">
+          <use href="./images/icons.svg#icon-close"></use></svg>
+           </button>
             <p class="modal-tittle text">Leave your contacts and we will call you back</p>
-            <form class="modal-form">
-                <div class="all-input-div">
-                    <label for="name" class="form-label">Name</label>
+             <form class="modal-form">
+              <div class="all-input-div">
+                 <label for="user-name" class="form-label">Name</label>
                     <div class="input-modal-div">
-                        <input type="text" name="user-name" id="name" class="modal-input" />
+                      <input type="text" name="name" id="user-name" class="modal-input" />
                         <svg class="modal-svg" width="18" height="24">
-                            <use href="./images/icons.svg#icon-name"></use>
-                        </svg>
+                        <use href="./images/icons.svg#icon-name"></use></svg>
                     </div>
                 </div>
                 <div class="all-input-div">
@@ -392,15 +388,14 @@
                     </div>
                 </div>
                 <div class="comment-input-div">
-                    <label class="form-label" for="comment">Comment</label>
-                    <textarea name="modal-comment" id="comment" class="comment" placeholder="Text input"></textarea>
+            <label class="form-label" for="user-comment">Comment</label>
+            <textarea name="user-comment" id="user-comment" class="comment" placeholder="Text input"></textarea>
                 </div>
                 <div class="check-input-div">
-                    <input type="checkbox" name="policy" id="policy" class="check visually-hidden" value="true" />
-                    <label class="check-txt" for="policy"><span><svg class="check-svg" width="10" height="8">
-                                <use href="./images/icons.svg#icon-check"></use>
-                            </svg></span> accept the terms and conditions of the &nbsp;<a href="">Privacy Policy</a>
-                    </label>
+                <input type="checkbox" name="user-privacy" id="user-privacy" class="check visually-hidden" value="true" />
+                <label class="check-txt" for="user-privacy"><span class="check-span"><svg class="check-svg" width="10" height="8">
+                <use href="./images/icons.svg#icon-check"></use>
+                </svg></span>accept the terms and conditions of the &nbsp;<a class="link-privacy" href="">Privacy Policy</a></label>
                 </div>
                 <button type="submit" class="modal-send-btn">Send</button>
             </form>
