--- a/portfolio.html
+++ b/portfolio.html
@@ -194,11 +194,10 @@
         <div class="container div-foot">
             <div class="div-foot-content">
                 <a href="./index.html" class="link logo foot">Web<span class="foot-logo-part">Studio</span></a>
-                <p class="footer-text text">Increase the flow of customers and sales for your business with digital
-                    marketing & growth solutions.</p>
+                <p class="footer-text text">Increase the flow of customers and sales for your business with digitalmarketing & growth solutions.</p>
             </div>
             <div class="div-foot-soc">
-                <p class="foot-tittle text">Social media</p>
+            <p class="foot-tittle text">Social media</p>
                 <ul class="foot-soc-icon list">
                     <li class="foot-soc-item">
                         <a class="foot-soc-link" href="#">
@@ -233,12 +232,10 @@
             <div class="foot-sub-div">
                 <p class="foot-sub-tittle">Subscribe</p>
                 <form class="foot-sub-form">
-                    <label for="mail-foot" aria-label=""></label>
-                    <input type="email" name="footer-email" id="mail-foot" placeholder="E-mail"
-                        class="foot-mail-input" />
-                    <button type="submit" class="foot-sub-btn">Subscribe<svg class="foot-sub-svg" width="24"
-                            height="24">
-                            <use href="./images/icons.svg#icon-sub"></use>
+                    <label for="mail-foot" class="sub-label" aria-label=""></label>
+                    <input type="email" name="footer-email" id="mail-foot" placeholder="E-mail" class="foot-mail-input" />
+                    <button type="submit" class="foot-sub-btn">Subscribe<svg class="foot-sub-svg" width="24" height="24">
+                        <use href="./images/icons.svg#icon-sub"></use>
                         </svg></button>
                 </form>
             </div>
