--- a/index.html
+++ b/index.html
@@ -345,8 +345,9 @@
             <div class="foot-sub-div">
             <p class="foot-sub-tittle">Subscribe</p>
                 <form class="foot-sub-form">
-                    <label for="mail-foot" class="sub-label" aria-label=""></label>
-                    <input type="email" name="footer-email" id="mail-foot" placeholder="E-mail" class="foot-mail-input" />
+                    <label class="sub-label" aria-label="">
+                    <input type="email" name="footer-email" placeholder="E-mail" class="foot-mail-input" />
+                    </label>
                     <button type="submit" class="foot-sub-btn">Subscribe<svg class="foot-sub-svg" width="24" height="24">
                     <use href="./images/icons.svg#icon-sub"></use>
                     </svg></button>
@@ -364,7 +365,7 @@
               <div class="all-input-div">
                  <label for="user-name" class="form-label">Name</label>
                     <div class="input-modal-div">
-                      <input type="text" name="name" id="user-name" class="modal-input" />
+                      <input type="text" name="user-name" id="user-name" class="modal-input" />
                         <svg class="modal-svg" width="18" height="24">
                         <use href="./images/icons.svg#icon-name"></use></svg>
                     </div>
@@ -395,7 +396,7 @@
                 <input type="checkbox" name="user-privacy" id="user-privacy" class="check visually-hidden" value="true" />
                 <label class="check-txt" for="user-privacy"><span class="check-span"><svg class="check-svg" width="10" height="8">
                 <use href="./images/icons.svg#icon-check"></use>
-                </svg></span>accept the terms and conditions of the &nbsp;<a class="link-privacy" href="">Privacy Policy</a></label>
+                </svg></span>I accept the terms and conditions of the&nbsp;<a class="link-privacy" href="">Privacy Policy</a></label>
                 </div>
                 <button type="submit" class="modal-send-btn">Send</button>
             </form>
