--- a/portfolio.html
+++ b/portfolio.html
@@ -232,8 +232,9 @@
             <div class="foot-sub-div">
                 <p class="foot-sub-tittle">Subscribe</p>
                 <form class="foot-sub-form">
-                    <label for="mail-foot" class="sub-label" aria-label=""></label>
-                    <input type="email" name="footer-email" id="mail-foot" placeholder="E-mail" class="foot-mail-input" />
+                    <label class="sub-label" aria-label="">
+                    <input type="email" name="footer-email" placeholder="E-mail" class="foot-mail-input" />
+                    </label>
                     <button type="submit" class="foot-sub-btn">Subscribe<svg class="foot-sub-svg" width="24" height="24">
                         <use href="./images/icons.svg#icon-sub"></use>
                         </svg></button>
